--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,177 @@
-# Binaries for programs and plugins
-*.exe
-*.dll
+###################################################################################################
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
+
+*.iml
+
+## Directory-based project format:
+.idea/
+# if you remove the above rule, at least ignore the following:
+
+# User-specific stuff:
+# .idea/workspace.xml
+# .idea/tasks.xml
+# .idea/dictionaries
+
+# Sensitive or high-churn files:
+# .idea/dataSources.ids
+# .idea/dataSources.xml
+# .idea/sqlDataSources.xml
+# .idea/dynamic.xml
+# .idea/uiDesigner.xml
+
+# Gradle:
+# .idea/gradle.xml
+# .idea/libraries
+
+# Mongo Explorer plugin:
+# .idea/mongoSettings.xml
+
+## File-based project format:
+*.ipr
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+
+
+###################################################################################################
+# MacOS
+
+**/.DS_Store
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+
+###################################################################################################
+# Linux
+
+*~
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+
+###################################################################################################
+# Vi
+
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
+
+###################################################################################################
+# Go
+
+# Compiled Object files, Static and Dynamic libs (Shared Objects)
+*.o
+*.a
 *.so
+*.dll
 *.dylib
 
-# Test binary, build with `go test -c`
-*.test
+# Folders
+_obj
+_test
+bin/
+pkg/
 
-# Output of the go coverage tool, specifically when used with LiteIDE
+# Architecture specific extensions/prefixes
+*.[568vq]
+[568vq].out
+
+*.cgo1.go
+*.cgo2.c
+_cgo_defun.c
+_cgo_gotypes.go
+_cgo_export.*
+
+_testmain.go
+
 *.out
+*.exe
+*.test
+*.prof
 
-# Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
-.glide/
+
+###################################################################################################
+# Javascript
+
+static/bower_components/
+static/*.log
+
+
+###################################################################################################
+# WORK
+
+WORK/structure/zania-data-elastic/bin
+WORK/structure/zania-data-elastic/pkg
+WORK/structure/zania-data-elastic/src/github.com
+WORK/structure/zania-data-elastic/src/golang.org
+WORK/structure/zania-data-elastic/src/gopkg.in
+
+
+###################################################################################################
+# ~~ Datas ~~
+
+src/webserver/sessions/*
+src/webserver/zania\.db*
+
+
+###################################################################################################
+# ~~ Others ~~
+
+\.tmp/
+data/*.db
+config/drivers.yaml
+HOWTO.txt
+dist/
+
+*.db
+
+src/zania-main
+src/main-es
+src/webserver/webserver
+src/webserver/sess-inspector
+
